tjoin: replace new Integer with Integer.valueOf
Do this in a few places where it might have an effect to reduce
the number of objects created.  There's only any point where
the integer may be small.